--- a/apps/my-pets-web/package.json
+++ b/apps/my-pets-web/package.json
@@ -80,6 +80,7 @@
 		"@svelteuidev/prism": "^0.15.3",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@turf/turf": "^7.0.0",
+		"@types/lodash": "^4.14.202",
 		"@types/turf": "^3.5.32",
 		"@types/w3c-image-capture": "^1.0.8",
 		"@urql/svelte": "^4.0.4",
