--- a/apps/my-pets-api/Dockerfile
+++ b/apps/my-pets-api/Dockerfile
@@ -1,45 +1,40 @@
 FROM node:18-alpine AS base
 
-# The web Dockerfile is copy-pasted into our main docs at /docs/handbook/deploying-with-docker.
-# Make sure you update this Dockerfile, the Dockerfile in the web workspace and copy that over to Dockerfile in the docs.
-
 FROM base AS builder
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+RUN corepack enable
+
 RUN apk add --no-cache libc6-compat
 RUN apk update
-# Set working directory
 WORKDIR /app
-RUN pnpm global add turbo
+
+RUN pnpm -g add turbo
+
 COPY . .
+
 RUN turbo prune --scope=my-pets-api --docker
 
-# Add lockfile and package.json's of isolated subworkspace
 FROM base AS installer
 RUN apk add --no-cache libc6-compat
 RUN apk update
 WORKDIR /app
 
-# First install dependencies (as they change less often)
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-RUN pnpm install
 
-# Build the project and its dependencies
+
+FROM base AS build
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
+
+RUN pnpm install
 COPY --from=builder /app/out/full/ .
 COPY global.d.ts global.d.ts
 COPY tsReset.d.ts tsReset.d.ts
 COPY turbo.json turbo.json
-
-# Uncomment and use build args to enable remote caching
-# ARG TURBO_TEAM
-# ENV TURBO_TEAM=$TURBO_TEAM
-
-# ARG TURBO_TOKEN
-# ENV TURBO_TOKEN=$TURBO_TOKEN
-
 RUN pnpm turbo run build --filter=my-pets-api...
-
 FROM base AS runner
 WORKDIR /app
 
