production server my-pets docker file --fix

--- a/apps/my-pets-api/Dockerfile
+++ b/apps/my-pets-api/Dockerfile
@@ -1,13 +1,12 @@
 FROM node:18-alpine AS base
+RUN apk update && apk add --no-cache libc6-compat
+RUN corepack enable && corepack prepare pnpm@7.4.1 --activate 
 
 FROM base AS builder
 
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
 
-RUN apk add --no-cache libc6-compat
-RUN apk update
 WORKDIR /app
 
 RUN pnpm -g add turbo
@@ -21,20 +20,20 @@ RUN apk add --no-cache libc6-compat
 RUN apk update
 WORKDIR /app
 
+
+
 COPY .gitignore .gitignore
 COPY --from=builder /app/out/json/ .
 COPY --from=builder /app/out/pnpm-lock.yaml ./pnpm-lock.yaml
-
-
-FROM base AS build
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
-
 RUN pnpm install
+
 COPY --from=builder /app/out/full/ .
 COPY global.d.ts global.d.ts
 COPY tsReset.d.ts tsReset.d.ts
 COPY turbo.json turbo.json
-RUN pnpm turbo run build --filter=my-pets-api...
+
+RUN pnpm turbo run build --filter=my-pets-api
+
 FROM base AS runner
 WORKDIR /app
 
